--- a/src/main/resources/templates/secure.html
+++ b/src/main/resources/templates/secure.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="https://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
@@ -7,5 +7,9 @@
 <body>
     <h3>Secure Page</h3>
   <a href="/logout">logout</a>
+  <h4>email</h4>
+<p th:text = "${user.email}"></p><br/>
+<h4>last name</h4>
+<p th:text="${user.lastName}"></p>
 </body>
 </html>
